	  and authenticated.
	* We have a brand new `COPYING.txt` files that describes the IPython license
	  and copyright.  The biggest change is that we are putting "The IPython
	  Development Team" as the copyright holder.  We give more details about exactly
	  what this means in this file.  All developer should read this and use the new
	  banner in all IPython source code files.
    * sh profile: ./foo runs foo as system command, no need to do !./foo anymore

Bug fixes
---------

	* The :mod:`IPython.kernel.scripts.ipengine` script was exec'ing mpi_import_statement
	  incorrectly, which was leading the engine to crash when mpi was enabled.
	* A few subpackages has missing `__init__.py` files.
	* The documentation is only created is Sphinx is found.  Previously, the `setup.py`
	  script would fail if it was missing.

Backwards incompatible changes
------------------------------

	* IPython has a larger set of dependencies if you want all of its capabilities.
	  See the `setup.py` script for details.
	* The constructors for :class:`IPython.kernel.client.MultiEngineClient` and 
	  :class:`IPython.kernel.client.TaskClient` no longer take the (ip,port) tuple.
	  Instead they take the filename of a file that contains the FURL for that
	  client.  If the FURL file is in your IPYTHONDIR, it will be found automatically
	  and the constructor can be left empty.
	* The asynchronous clients in :mod:`IPython.kernel.asyncclient` are now created 
	  using the factory functions :func:`get_multiengine_client` and 
	  :func:`get_task_client`.  These return a `Deferred` to the actual client.
	* The command line options to `ipcontroller` and `ipengine` have changed to
	  reflect the new Foolscap network protocol and the FURL files.  Please see the
	  help for these scripts for details.
	* The configuration files for the kernel have changed because of the Foolscap stuff.
	  If you were using custom config files before, you should delete them and regenerate
	  new ones.
